--- a/INFO ALL SETINGAN OPTI DANDA.html
+++ b/INFO ALL SETINGAN OPTI DANDA.html
@@ -45,6 +45,73 @@
             box-shadow: 0 4px 15px rgba(0, 255, 20, 0.1);
         }
     </style>
+    <style> @import
+url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Orbi
+tron:wght@400;700&display=swap'); body { font-
+family: 'Roboto Mono', monospace; background-
+color: #0d1117; /* Dark GitHub-like background */
+color: #c9d1d9; /* Light grey text */ }
+
+/* ============================================== */
+/* Mulai Kode CSS untuk Navbar/Header Tetap */
+.fixed-navbar {
+    position: fixed; /* Ini yang membuat elemen tetap di tempat */
+    top: 0;          /* Memposisikan di bagian paling atas layar */
+    left: 0;         /* Memposisikan di bagian paling kiri layar */
+    width: 100%;     /* Memastikan selebar layar penuh */
+    background-color: #1a1a1a; /* Warna latar belakang navbar, sesuaikan jika perlu */
+    z-index: 1000;   /* Memastikan navbar selalu di atas konten lain */
+    padding: 15px 20px; /* Padding internal navbar */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4); /* Efek bayangan */
+    display: flex; /* Untuk layout logo dan link sejajar */
+    justify-content: space-between; /* Untuk memisahkan logo dan link */
+    align-items: center; /* Untuk mensejajarkan secara vertikal */
+}
+
+.navbar-logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #39ff14; /* Warna neon hijau */
+    text-shadow: 0 0 8px #39ff14;
+}
+
+.navbar-links a {
+    color: #e0e0e0;
+    text-decoration: none;
+    margin-left: 25px; /* Jarak antar link */
+    font-size: 16px;
+    transition: color 0.3s ease;
+}
+
+.navbar-links a:hover {
+    color: #39ff14; /* Warna hover neon hijau */
+}
+
+/* Penting: Tambahkan padding ke body agar konten tidak tertutup navbar */
+body {
+    padding-top: 70px; /* Sesuaikan nilai ini dengan tinggi total navbar Anda */
+    /* Properti body lainnya yang sudah ada */
+}
+/* Akhir Kode CSS untuk Navbar/Header Tetap */
+/* ============================================== */
+
+.text-neon-
+green { color: #39ff14; /* Neon Green */ text-
+shadow: 0 0 5px #39ff14, 0 0 10px #39ff14, 0 0
+15px #39ff14; } .border-neon-green { border-color:
+#39ff14; box-shadow: 0 0 5px #39ff14; } .btn-neon
+{ background-color: #39ff14; color: #0d1117; text-
+shadow: none; transition: all 0.3s ease; } .btn-
+neon:hover { background-color: #2ad10d; box-
+shadow: 0 0 10px #39ff14; } .section-header {
+font-family: 'Orbitron', sans-serif; text-shadow: 0 0
+8px #39ff14; } .card { background-color: #161b22;
+/* Slightly lighter dark */ border: 1px solid
+#30363d; border-radius: 8px; padding: 1.5rem;
+box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); }
+    }     
+</style>
+    
 </head>
 <body class="bg-gray-900 text-gray-200">
     <!-- Navbar -->
